...

final class WebViewViewImpl: UIView, WebViewView {

    weak var delegate: WebViewViewDelegat?
    private var observation: NSKeyValueObservation?

    @objc private lazy var webView: WKWebView = {
        let view = WKWebView()
        view.translatesAutoresizingMaskIntoConstraints = false
        view.accessibilityIdentifier = "webView"
        view.backgroundColor = .ypWhite
        return view
    }()

    private lazy var backButton: UIButton = {
        let view = UIButton()
        view.translatesAutoresizingMaskIntoConstraints = false
        view.setImage(UIImage.backBlack, for: .normal)
        view.setTitle("", for: .normal)
        NSLayoutConstraint.activate([
            view.heightAnchor.constraint(equalToConstant: 44),
...
